# My-Exception

./: CMakeLists.txt
docs/: doxygen_config
docs/html/: _0Dcode-example.html  _0Dusage-example.html  _va_exception_8hpp.html  _va_exception_8hpp.js  _va_exception_8hpp__dep__incl.map  _va_exception_8hpp__dep__incl.md5  _va_exception_8hpp__incl.map  _va_exception_8hpp__incl.md5  _va_exception_8hpp_source.html  annotated.html  annotated_dup.js  class__error_info_1_1_error_info-members.html  class__error_info_1_1_error_info.html  class__error_info_1_1_error_info.js  class_exception-members.html  class_exception.html  class_exception.js  class_va_exc_1_1__error_info_1_1_error_info-members.html  class_va_exc_1_1__error_info_1_1_error_info.html  class_va_exc_1_1__error_info_1_1_error_info.js  class_va_exc_1_1_exception-members.html  class_va_exc_1_1_exception.html  class_va_exc_1_1_exception.js  class_va_exc_1_1_exception__coll__graph.map  class_va_exc_1_1_exception__coll__graph.md5  class_va_exc_1_1_exception__inherit__graph.md5  classes.html  dir_0ffaa8a00c25f230905278b11246fdf5.html  dir_0ffaa8a00c25f230905278b11246fdf5.js  dir_3712774fc80fef7d8c0402e128e3ec91.html  dir_3712774fc80fef7d8c0402e128e3ec91.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7eb09e58583f359e753ec9733cdd3f32.html  dir_7eb09e58583f359e753ec9733cdd3f32.js  dir_88486aa487cdceaae9cac0a20adde89e.html  dir_88486aa487cdceaae9cac0a20adde89e.js  dir_f753cf9e472f53b5bb8559cb167fb5dd.html  (+83 more)
docs/latex/: annotated.tex  (+47 more)
src/: VaException.hpp  test.cpp  vaexc_test.cpp
(+21 files in other folders)
